# Django_SANDBOX

./: .gitignore  README.txt  pyproject.toml
sandbox_prj/: requirements.txt
sandbox_prj/apps/users/: models.py
sandbox_prj/apps/users/migrations/: 0001_initial.py
sandbox_prj/sandbox/: settings.py  urls.py
