[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Just a django package to test stuff"
authors = ["Fernando Soares <biofsdev@gmail.com>"]
license = "No license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
dj-database-url = "^2.0.0"
django-allauth = "^0.54.0"
django-bootstrap-v5 = "^1.0.11"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-extensions = "^3.2.3"
django-filter = "^23.2"
django-geojson = "^4.0.0"
django-import-export = "^3.2.0"
django-leaflet = "^0.29.0"
django-project-version = {extras = ["git"], version = "^0.18.0"}
django-smart-selects = "^1.6.0"
djangorestframework-gis = "^1.0"
pillow = "^10.0.0"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
django-model-utils = "^4.3.1"
pyparsing = "^3.1.0"
pydot = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
